--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,7 @@
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongo-sanitize": "^1.1.0",
-    "mongoose": "^5.11.14",
-    "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "path": "^0.12.7"
   }
