--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "auth0-js": "^9.14.3",
+    "auth0-lock": "^11.28.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "jwt-decode": "^3.1.2",
     "sass-loader": "^10.1.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-cookie": "^1.1.4",
+    "vue-localstorage": "^0.6.2",
+    "vue-router": "^4.0.0-0",
+    "vue-sessionstorage": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -39,10 +45,5 @@
       "parser": "babel-eslint"
     },
     "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  }
 }
