--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "auth0-js": "^9.14.3",
     "auth0-lock": "^11.28.0",
     "axios": "^0.21.1",
