--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.0.0",
     "vue-cookie": "^1.1.4",
     "vue-localstorage": "^0.6.2",
+    "vue-moment": "^4.1.0",
     "vue-router": "^4.0.0-0",
     "vue-sessionstorage": "^1.0.0"
   },
