--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,12 @@
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-mongo-sanitize": "^2.0.2",
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sanitize": "^2.1.0"
   }
 }
