dernieres modifications pour oral

--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,4 @@ DB_DATABASE = groupomania
 
 identifiant administrateur
 email : almoyner.heloise@gmail.com
-mot de passe : 
+mot de passe : Almoadmin1
